[tool.poetry]
name = "pricing-input-form"
version = "0.0.1"
description = "Data Science Applications"
authors = ["Data Science"]

[tool.poetry.dependencies]
python = "3.10.4"
snowflake-connector-python = "^2.7"
protobuf = "3.20.1"
python-json-logger = "^2"
datadog = "^0.43.0"
pandas = "^1.2.5"
plotly = "^5.7.0"
streamlit = "^1.9.0"
millify = "^0.1.1"
click = "7.1.2"
streamlit-aggrid = "^0.3.4.post3"
gspread = "^5.10.0"
streamlit-gsheets = {git = "https://github.com/streamlit/gsheets-connection"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.10.1"
flake8 = "^4.0.1"
psycopg2-binary = "^2.8.6"
black = "21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
